[fix] fixes scrollbar width issue with chrome

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,10 @@ body {
   width: 100vw;
   height: 800px;
   font-family: sans-serif;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
+
 #app {
   margin: 0;
   padding: 0;
